--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.14
   path: ^1.8.2
   sqflite: ^2.2.6
+  share_plus: ^6.3.1
 
 dev_dependencies:
   flutter_test:
