--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.5.0
-  firebase_auth: ^4.2.6 #flutter pub add <name>
+  firebase_auth: ^4.2.6
+  firebase_database: ^10.0.15 #flutter pub add <name>
   cloud_firestore: ^4.4.0
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.1
+  flutter_osm_plugin: ^0.51.0
+  animations: ^2.0.7
+  flutter_animate: ^4.1.0
+  google_fonts: ^4.0.3
+  provider: ^6.0.5
+  flutter_map_marker_cluster: ^0.4.4
+  flutter_map_marker_popup: ^2.1.2
+  http: ^0.13.0
+  location: ^4.4.0
+  syncfusion_flutter_maps: ^21.1.37
   firebase_analytics: ^10.1.1
   path_provider: ^2.0.14
   path: ^1.8.2
