--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:899561839732:ios:12adaeab314e0a9a5cc521",
-  "FIREBASE_PROJECT_ID": "myfirstproject-bdf79",
-  "GCM_SENDER_ID": "899561839732"
+  "GOOGLE_APP_ID": "1:348597797264:ios:fa65cbfc797b8128733315",
+  "FIREBASE_PROJECT_ID": "seproject-d5cb7",
+  "GCM_SENDER_ID": "348597797264"
 }
