--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_launcher_icons: ^0.13.0
   intl: ^0.17.0
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -91,9 +92,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/login.jpeg
+   - assets/back.jpeg
+   - assets/maps/blue.svg
+   - assets/maps/yellow.svg
+   - assets/maps/current.svg
+   - assets/maps/green.svg
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
