--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "C:/Users/vivaa/StudioProjects/SE-project/linux"
+    "cmake.sourceDirectory": "C:/Users/vivaa/StudioProjects/SE-project/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
