--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_auth: ^4.2.6
   firebase_database: ^10.0.15 #flutter pub add <name>
-  cloud_firestore: ^4.4.0
+  cloud_firestore: ^4.6.0
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   flutter_osm_plugin: ^0.51.0
@@ -65,6 +65,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.0
   intl: ^0.17.0
   flutter_svg: ^2.0.5
+  image_picker: ^0.8.7+4
+  firebase_storage: ^11.1.2
 
 dev_dependencies:
   flutter_test:
@@ -99,7 +101,14 @@ flutter:
    - assets/maps/yellow.svg
    - assets/maps/current.svg
    - assets/maps/green.svg
-
+   - assets/maps/mul.png
+   - assets/maps/medplus.png
+   - assets/maps/sdm.jpg
+   - assets/maps/sdmd.png
+   - assets/maps/shri.png
+   - assets/maps/sneha.jpg
+   - assets/maps/rc.png
+   - assets/maps/shiva.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
