--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,11 @@ dependencies:
   flutter_svg: ^2.0.5
   image_picker: ^0.8.7+4
   firebase_storage: ^11.1.2
+  file_picker: ^5.2.10
+  salomon_bottom_bar: ^3.3.2
+  font_awesome_flutter: ^10.4.0
+  syncfusion_flutter_datepicker: ^21.2.3
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -107,6 +112,8 @@ flutter:
    - assets/maps/sdmd.png
    - assets/maps/shri.png
    - assets/maps/sneha.jpg
+   - assets/icon/back.png
+   - assets/images/
    - assets/maps/rc.png
    - assets/maps/shiva.png
 
